Added a new way to load the files

--- a/BD_T2/MainWindow.xaml
+++ b/BD_T2/MainWindow.xaml
@@ -10,8 +10,8 @@
         <Rectangle Fill="#FFF4F4F5" Stroke="Black" Margin="0,1,0,-3" Grid.ColumnSpan="2" Height="466" VerticalAlignment="Top"/>
         <TextBlock x:Name="w_FileReadStatus" HorizontalAlignment="Left" Height="25" Margin="10,16,0,0" TextWrapping="Wrap" Text="&lt;&lt; FileRead Status &gt;&gt;" VerticalAlignment="Top" Width="145" Grid.ColumnSpan="2"/>
         <TextBlock x:Name="w_FileOperations" HorizontalAlignment="Left" Height="421" Margin="5,46,0,-3" TextWrapping="Wrap" Text="&lt;&lt; Operations Found &gt;&gt;" VerticalAlignment="Top" Width="150" Grid.ColumnSpan="2"/>
-        <TextBlock x:Name="w_OperationResult" HorizontalAlignment="Left" Height="366" Margin="71,88,0,0" TextWrapping="Wrap" Text="&lt;&lt; Results &gt;&gt;" VerticalAlignment="Top" Width="214" Grid.Column="1"/>
-        <Button x:Name="w_ReadFileButton" Content="Read File" HorizontalAlignment="Left" Height="31" Margin="71,10,0,0" VerticalAlignment="Top" Width="106" ToolTip="Reads the txt file to be used" Click="w_ReadFileButton_Click" Grid.Column="1"/>
+        <TextBlock x:Name="w_OperationResult" HorizontalAlignment="Left" Height="376" Margin="71,88,0,0" TextWrapping="Wrap" Text="&lt;&lt; Results &gt;&gt;" VerticalAlignment="Top" Width="211" Grid.Column="1"/>
+        <Button x:Name="w_ReadFileButton" Content="Choose File" HorizontalAlignment="Left" Height="31" Margin="71,10,0,0" VerticalAlignment="Top" Width="106" ToolTip="Reads the txt file to be used" Click="w_ReadFileButton_Click" Grid.Column="1"/>
         <Button x:Name="w_ExecuteFileButton" Content="Execute File" Grid.Column="1" HorizontalAlignment="Left" Height="31" Margin="182,10,0,0" VerticalAlignment="Top" Width="100" Click="w_ExecuteFileButton_Click" RenderTransformOrigin="0.48,0.613"/>
         <Button x:Name="w_ExecuteAllButton" Content="All" Grid.Column="1" HorizontalAlignment="Left" Height="37" Margin="235,46,0,0" VerticalAlignment="Top" Width="47" Click="w_ExecuteAllButton_Click"/>
         <Button x:Name="w_ExecuteStepButton" Content="Step" Grid.Column="1" HorizontalAlignment="Left" Margin="182,46,0,0" VerticalAlignment="Top" Width="48" Height="37" Click="w_ExecuteStepButton_Click"/>
